# va-bench

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  a.html  b.html  cabal.project  flake.nix  va-bench.cabal
bench/: InlineEffect.hs  InlineSort.hs  Main.hs  Nub.hs
bench-result/: inline-sort.html  nub.html  sort-vs-sort-by.html
src/: Common.hs  README.md
src/Intro/: Inline.hs  README.md  StToPrim.hs
src/Nub/: Inline.hs  Inlineable.hs  README.md
